--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -401,7 +401,7 @@ enable_audio_bell no
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+tab_bar_edge bottom
 
 #: Which edge to show the tab bar on, top or bottom
 
@@ -496,6 +496,10 @@ include ./theme.conf
 #: VISUAL and EDITOR in that order. Note that this environment
 #: variable has to be set not just in your shell startup scripts but
 #: system-wide, otherwise kitty will not see it.
+
+confirm_os_window_close 0
+
+#: Close window without confirmation, default is true
 
 # close_on_child_death no
 
@@ -833,20 +837,23 @@ map kitty_mod+b move_window_backward
 
 #: Tab management {{{
 
-map kitty_mod+ctrl+right next_tab
-map kitty_mod+ctrl+left  previous_tab
-map kitty_mod+ctrl+t     new_tab
-# map Ctrl+Alt+shift+q     close_tab
-# map Ctrl+Alt+.     move_tab_forward
-# map Ctrl+Alt+,     move_tab_backward
-map kitty_mod+Alt+t set_tab_title
+map Ctrl+Tab           next_tab
+map Ctrl+Shift+Tab            previous_tab
+map Ctrl+t               new_tab
+map Ctrl+q               close_tab
+map Ctrl+.               move_tab_forward
+map Ctrl+,               move_tab_backward
+map Ctrl+Shift+r               set_tab_title
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
 #: tab::
 
-#:     map ctrl+alt+1 goto_tab 1
-#:     map ctrl+alt+2 goto_tab 2
+map Ctrl+1 goto_tab 1
+map Ctrl+2 goto_tab 2
+map Ctrl+3 goto_tab 3
+map Ctrl+4 goto_tab 4
+map Ctrl+5 goto_tab 5
 
 #: Just as with new_window above, you can also pass the name of
 #: arbitrary commands to run when using new_tab and use
