--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -18,20 +18,20 @@
 [color]
 
 ; Active Shade 
-shade1 = #E65100
-shade2 = #EF6C00
-shade3 = #F57C00
-shade4 = #FB8C00
-shade5 = #FF9800
-shade6 = #FFA726
-shade7 = #FFB74D
-shade8 = #FFCC80
+shade1 = #880E4F
+shade2 = #AD1457
+shade3 = #C2185B
+shade4 = #D81B60
+shade5 = #E91E63
+shade6 = #EC407A
+shade7 = #F06292
+shade8 = #F48FB1
 
 ;; Active Colors
 bground = #1D1F28
 fground = #f7f7f7
 ;borderbg = #f7f7f7
-accent = #FB8C00
+accent = #D81B60
 modulefg = #f7f7f7
 modulefg-alt = #f7f7f7
 
