--- a/.config/i3/config
+++ b/.config/i3/config
@@ -166,10 +166,8 @@ client.unfocused        $bg0_h $bg4 $bg4 #ffffff $bg4
 # is used in the bar {} block below.
 font pango:Source Sans Pro 8
 
-
-
 # Start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec kitty
 
 # Kill focused window
 bindsym $mod+Shift+q kill
@@ -197,8 +195,8 @@ default_border pixel 3
 smart_borders no_gaps
 
 # Inner/outer gaps
-gaps inner 7 #15
-gaps outer 7 #10
+gaps inner 7px
+gaps outer 7px
 
 ### AUTOSTART ###
 #Polybar
@@ -213,19 +211,15 @@ exec --no-startup-id "picom -b"
 #xfce power manager
 exec --no-startup-id "xfce4-power-manager"
 
-#Spotify instance
-# exec --no-startup-id "com.spotify.Client"
-
 #Thunderbird
 exec --no-startup-id "thunderbird"
 
-#Discord
-# exec --no-startup-id "discord-canary"
-exec --no-startup-id "discord"
-# exec --no-startup-id "sleep 30 && discord"
+#Thunar daemon
+exec --no-startup-id "thunar --daemon"
 
-#Redshift
-# exec --no-startup-id "redshift-gtk"
+#Discord
+exec --no-startup-id "discord"
+
 
 #Network manager
 exec --no-startup-id "NetworkManager"
